--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,6 @@
     {
       "source": "functions",
       "codebase": "default",
-      "timeoutSeconds": 540,
       "ignore": [
         "node_modules",
         ".git",
@@ -15,14 +14,15 @@
     {
       "source": "ml_functions",
       "codebase": "ml",
-      "timeoutSeconds": 540,
       "ignore": [
         "node_modules",
         ".git",
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
-      ]
+      ],
+      "runtime": "python311"
+
     }
   ],
   "emulators": {
