--- a/ml_functions/requirements.txt
+++ b/ml_functions/requirements.txt
@@ -1,6 +1,6 @@
-firebase-functions~=0.1.0
-firebase-admin
-requests==2.32.3
-pillow==11.2.0
-huggingface-hub==0.30.1
-
+    firebase-functions>=0.4.2
+    firebase-admin
+    requests==2.32.3
+    pillow==11.2.0
+    huggingface-hub==0.30.1
+    opencv-python-headless
