--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2",
+    "firebase-tools": "^14.0.1",
     "punycode": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
