--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "serve -s dist"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "@mantine/core": "^7.17.2",
